# conways-game-of-life

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  test.txt
src/: main.rs
