cargo-features = ["panic-immediate-abort"]
[package]
name = "Game-of-Life"
version = "0.1.0"
edition = "2024"

[dependencies]
# fastrand = "2.3.0"

[profile.release]
strip = true
opt-level = "z" #Optimize for size
lto = true
codegen-units = 1
panic = "abort"
# [toolchain]
# channel = "nightly"
# components = ["rust-analyzer", "rust-src", "clippy"]
